Fix #194 - Use dotted underline again to make links more visible.

--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -205,28 +205,20 @@ ul {
 	padding-left: 20px;
 }
 
-// TODO: most of this is copy/pasted from .admonition. We should factor out the common bits
 blockquote {
-	background: $white;
-	padding: 15px 20px 15px 70px;
-	border: 1px solid $green-very-light;
-	@include border-radius(4px);
-	margin: 25px 0;
-	position: relative;
+	@include sans-serif;
+	@include font-size(22);
 
 	p:first-child {
 		margin-top: 0;
 	}
-	&::before {
-		@include fa-icon();
-		position: absolute;
-		top: 20px;
-		left: 20px;
-		font-size: 30px;
-		width: 34px;
-		text-align: center;
-		content: $fa-var-quote-left; // default icon
-		opacity: 0.5;
+
+	.meta {
+		@include font-size(14);
+	}
+
+	@include respond-min(768px) {
+		@include font-size(28);
 	}
 }
 
@@ -2200,11 +2192,12 @@ h2 + .list-link-soup {
 	@include sans-serif;
 	@include font-size(14);
 	line-height: 1.5em;
+
 	a.reference {
 		// for docs links. if we keep text-decoration, then underscores in function names become invisible.
 		color: $red-dark;
 		text-decoration: none;
-		padding-bottom: 1px;
+		border-bottom: 1px dotted $text-light;
 
 		&:visited {
 			border-color: lighten($red-dark, 10%);
@@ -2215,10 +2208,6 @@ h2 + .list-link-soup {
 		&:hover {
 			background: $white;
 			color: $red;
-		}
-
-		tt.literal {
-			border-bottom: 1px dotted $text-light;
 		}
 
 		em {
